--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "mongoose": "^8.0.3",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
